# Authify

./: .dockerignore  .env.example  .gitignore  Dockerfile  License  changelog.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  lifecycle.py  load_env.py
app/core/crypto/: hashing.py
app/middlewares/: jwt_middleware.py
app/models/: auth_model.py  response_model.py  type_model.py
app/routes/: auth_routes.py
app/schemas/: auth_schemas.py  response_schema.py
app/services/: auth_service.py  jwt_service.py
app/tests/auth/: test_login.py  test_register.py
app/tests/models/: validate_error_model.py
