[project]
name = "authify"
version = "0.1.0"
description = "Simple Authentication system implementation with python and fastapi"
authors = [{ name = "Yogesh", email = "yoge.self@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "tortoise-orm[asyncpg] (>=0.24.2,<0.25.0)",
    "gino (>=1.0.1,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
